# BCES

./: .gitignore  CLAUDE.md  LICENSE  README.md  bces-examples.ipynb  bces.py  misc howto bces.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  stats howto bces.ipynb
bces/: __init__.py  bces.py
doc/: TODO.md  bces-examples.ipynb  data.npz  misc.md  wls.ipynb
tests/: conftest.py  test.py  test_bces.py
